syntax = "proto3";

package storage;
option go_package = "./;pb";

service UserStorage {
  rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message User {
  string nickname = 1;
  bytes password_hash = 2;
}

message AddUserRequest {
  User user = 1;
}

message AddUserResponse {
}

message GetUserRequest {
  string nickname = 1;
}

message GetUserResponse {
  User user = 1;
}